delete and put + data val and error hand
